[gd_scene load_steps=3 format=3 uid="uid://nts0rdvojke6"]

[ext_resource type="Script" uid="uid://bitjuaydexgya" path="res://hud_script.gd" id="1_oa71g"]

[sub_resource type="LabelSettings" id="LabelSettings_fe6f2"]
font_size = 14
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.745098)

[node name="CanvasGroup" type="CanvasGroup"]
script = ExtResource("1_oa71g")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 367.0
offset_top = 525.0
offset_right = 367.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Control"]
custom_minimum_size = Vector2(400, 50.185)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 522.0
offset_bottom = 30.0
text = "Este é um texto de teste que deve quebrar automaticamente para a próxima linha.
"
label_settings = SubResource("LabelSettings_fe6f2")
vertical_alignment = 3
autowrap_mode = 2

[node name="back" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 50.0
scale = Vector2(10.44, 1)
color = Color(0.0313726, 0.0313726, 0.0313726, 0.517647)

[node name="ChoiceButtons" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 211.0
offset_top = 78.0
offset_right = 292.0
offset_bottom = 118.0

[node name="YesButton" type="Button" parent="Control/ChoiceButtons"]
layout_mode = 2
text = "Sim"

[node name="NoButton" type="Button" parent="Control/ChoiceButtons"]
layout_mode = 2
text = "Não"
